update test assertj